--- a/blog/Luogu/2024.11.15 树状数组学习.md
+++ b/blog/Luogu/2024.11.15 树状数组学习.md
@@ -1,6 +1,7 @@
 ---
 authors: [zwz6666]
 tags: [luogu,solution]
+date: 2024.11.15
 ---
 # 2024.11.15 树状数组学习
 
@@ -14,6 +15,7 @@ tags: [luogu,solution]
 - [P2068 统计和](https://www.luogu.com.cn/problem/P2068)
 - [P3655 不成熟的梦想家 (未熟 DREAMER)](https://www.luogu.com.cn/problem/P3655)  
 
+<!-- truncate -->
 # 以下是正文部分
 
 
