更新大事记和关于我的页面，添加原始链接和未列出标记；调整侧边栏格式，移除博客侧边栏配置

--- a/blog/Luogu/大事记.md
+++ b/blog/Luogu/大事记.md
@@ -1,7 +1,12 @@
 ---
+# unlisted: true
+date: 2024.10.14
+last_updata: 2024.12.31
 title: 洛谷大事记
 authors: [zwz6666]
 tags: [luogu,other]
+
+originalUrl: https://luogu.com.cn
 ---
 <!-- truncate -->
 [$\large{OLD}$](https://www.luogu.com.cn/paste/2pecwn1o)
