更新版本至 1.1.3，修复标签字段拼写错误，增加快速链接功能，更新更新日志，优化配置文件格式

--- a/blog/2025-4-19.mdx
+++ b/blog/2025-4-19.mdx
@@ -1,8 +1,8 @@
 ---
 title: 2025.4.19
 authors: [zwz6666]
-tag: [日记,2025]
-data: 2025-4-19
+tags: [日记,2025]
+date: 2025-4-19
 description: 联考后的思考。
 ---
 
