--- a/blog/2025-5-1.mdx
+++ b/blog/2025-5-1.mdx
@@ -1,8 +1,8 @@
 ---
 title: 2025.5.1
 authors: [zwz6666]
-tag: [日记,2025]
-data: 2025-5-1
+tags: [日记,2025]
+date: 2025-5-1
 description: 一些琐事，比如 Bilibili 上的一条评论。
 ---
 写本篇文章的起因，是我在 Bilibili 上的发表的一条具有重要意义的评论：   
