--- a/docs/关于本站/updataLog.mdx
+++ b/docs/关于本站/updataLog.mdx
@@ -83,3 +83,15 @@ slug: '/updataLog'
 6. 其他一些小更新。
 
 一时想不起别的了。
+
+## 2025年5月2日
+
+版本号： v1.1.3（中等重要小版本更新）
+
+### 增加快速链接网站
+
+详见[更新日志](/docs/updataLog)。
+
+### 其他更新
+
+文章和文档增加显示最后更新日期。
