更新版本至 1.1.4，调整网站列表和主站托管信息，移除对爬虫的限制，增加快速链接功能，修复更新日志中的链接错误，添加 2025.5.4 日记

--- a/docs/关于本站/updataLog.mdx
+++ b/docs/关于本站/updataLog.mdx
@@ -90,8 +90,26 @@ slug: '/updataLog'
 
 ### 增加快速链接网站
 
-详见[更新日志](/docs/updataLog)。
+详见[网站列表](/docs/list)。
 
 ### 其他更新
 
 文章和文档增加显示最后更新日期。
+
+## 2025年5月4日
+
+版本号： v1.1.4（重要小版本更新）
+
+### **更改网站列表，主站更改，GitHub Pages URL 调整**
+
+rt，详细请见网站列表。
+
+### 错误调整
+
+比如前天的更新日志中，网站列表的链接错误。
+
+### 移除对爬虫的限制
+
+具体内容如下：
+1. 移除 robots.txt 文件，允许所有爬虫访问。
+2. 移除meta标签，允许所有爬虫访问。
