更新版本至 1.1.5，增加 2025.5.10 日记，调整网站列表内容，修复部分文档的 slug，更新配置以允许 KaTeX 非严格模式（似乎没有），优化更新日志。

--- a/blog/Luogu/大事记.md
+++ b/blog/Luogu/大事记.md
@@ -5,6 +5,7 @@ last_updata: 2024.12.31
 title: 洛谷大事记
 authors: [zwz6666]
 tags: [luogu,other]
+slug: luogu/milestones
 
 originalUrl: https://luogu.com.cn
 ---
