--- a/blog/Luogu/线段树模版.md
+++ b/blog/Luogu/线段树模版.md
@@ -3,6 +3,7 @@ title: 线段树模版
 date: 2024-10-19T00:49:53
 authors: [zwz6666]
 tags: [luogu,banzi]
+slug: luogu/linetree
 ---
 <!-- truncate -->
 ## 求和模版
