--- a/blog/Luogu/题解：P5662 [CSP-J2019] 纪念品.md
+++ b/blog/Luogu/题解：P5662 [CSP-J2019] 纪念品.md
@@ -3,6 +3,7 @@ title: '题解：P5662 [CSP-J2019] 纪念品'
 date: 2024-12-28 14:30:13
 authors: [zwz6666]
 tags: [luogu,solution]
+slug: luogu/P5662
 ---
 
 ## 解题思路
