--- a/docs/关于本站/siteList.mdx
+++ b/docs/关于本站/siteList.mdx
@@ -12,7 +12,9 @@ slug: '/list'
 
 主站：
 - [docs.zhongwz.top](https://docs.zhongwz.top):  
-    托管于 Cloudflare。仅本人测试、体验，这个是在本人当前的条件下（没钱，备不了案等），国内访问速度最快的站点。
+    托管于 Cloudflare。手动部署。  
+    经本人测试、体验，这个是在本人当前的条件下（没钱，备不了案等），国内访问速度最快的站点。
+
     （注：限制于 Cloudflare 构建环境不支持 Git，又想要实现查看上次更新日期的功能，一般自己上传文件，但本人可能记性不太好）
 
 保留站：
@@ -23,14 +25,14 @@ slug: '/list'
 备用站列表：
 
 - [docs2.zhongwz.top](https://docs2.zhongwz.top):  
-    备用一站，托管于 CloudFlare Pages。
+    备用一站，托管于 CloudFlare Pages，自动部署。
     （理论上与 Github同步，访问相对稳定）
-- [docs3.zhongwz.top](https://docs3.zhongwz.top):  
+- ~~[docs3.zhongwz.top](https://docs3.zhongwz.top):  
     备用二站，托管于 阿里云OSS，新加坡地域。
-    （版本最落后，且更新随缘，访问稳定。毕竟这是真的可能会扣钱的啊）（2025.5.1：暂时暂停服务）
-- [docs4.zhongwz.top](https://docs4.zhongwz.top):  
+    （版本最落后，且更新随缘，访问稳定。毕竟这是真的可能会扣钱的啊）（2025.5.1：暂时暂停服务）~~
+- ~~[docs4.zhongwz.top](https://docs4.zhongwz.top):  
     备用三站，托管于 热铁盒网页托管，服务器也在国外。
-    （理论上与 Github同步，实际上因为热铁盒的限制，actions 部署总是失败，而且会员马上就要到期了，访问相对稳定）
+    （理论上与 Github同步，实际上因为热铁盒的限制，actions 部署总是失败，而且会员马上就要到期了，访问相对稳定）~~
 - [docs5.zhongwz.top](https://docs5.zhongwz.top):  
     备用四站，托管于 Cloudflare Pages，与主站一致，只是域名不同，DNS记录都是相同的。
     （版本最新，但是国内访问稳定）
