--- a/docs/关于本站/updataLog.mdx
+++ b/docs/关于本站/updataLog.mdx
@@ -113,3 +113,14 @@ rt，详细请见网站列表。
 具体内容如下：
 1. 移除 robots.txt 文件，允许所有爬虫访问。
 2. 移除meta标签，允许所有爬虫访问。
+
+## 2025年5月10日
+
+版本号： v1.1.5（小版本更新）
+
+### 内容增加、地址改变
+
+1. 增加今日的日记（5月10日）。虽然本来是9号的。
+2. 洛谷的内容都改了 URL，链接更短了。
+
+其他一些小更新，比如网站列表阿里云和热铁盒的暂时移除支持。
