--- a/blog/Luogu/题解：P2141 [NOIP2014 普及组] 珠心算测验.md
+++ b/blog/Luogu/题解：P2141 [NOIP2014 普及组] 珠心算测验.md
@@ -2,6 +2,7 @@
 date: 2024-12-30 16:09:42
 authors: [zwz6666]
 tags: [luogu,solution]
+slug: luogu/P2141
 ---
 # 题解：P2141 [NOIP2014 普及组] 珠心算测验
 ## 解题思路
