--- a/docs/关于本站/updataLog.mdx
+++ b/docs/关于本站/updataLog.mdx
@@ -124,3 +124,14 @@ rt，详细请见网站列表。
 2. 洛谷的内容都改了 URL，链接更短了。
 
 其他一些小更新，比如网站列表阿里云和热铁盒的暂时移除支持。
+
+## 2025年5月17日
+
+版本号： v1.1.6（中等重要小版本更新）
+
+### 内容增加、新增统计
+
+1. 增加今日的日记（5月17日）。
+2. [写给自己看到教程](/docs/docs)格式小改，解决了 MD029 问题。
+3. 插入 Umami 统计代码到网页头部以统计访客信息等（上周加的，但是没有更新到 Github 上）。
+
