更新版本至 1.2.0
### 常规更新

1. 增加今天的日记，额外包含三张图片、两个网页文件。
2. [写给自己看到教程](/docs/docs)增加内网 ip 部署命令（npx）。

### 日记文件结构调整

所有日记主体文件由 `/blog/date.md(x)` 迁移到 `/blog/diary/date.md(x)`。

--- a/blog/diary/2025-5-1.mdx
+++ b/blog/diary/2025-5-1.mdx
@@ -4,7 +4,12 @@ authors: [zwz6666]
 tags: [日记,2025]
 date: 2025-5-1
 description: 一些琐事，比如 Bilibili 上的一条评论。
+slug: /2025/5/1
 ---
+:::tip
+原作者（LX）似乎已经将原视频设置为仅自己可见。
+::: 
+
 写本篇文章的起因，是我在 Bilibili 上的发表的一条具有重要意义的评论：   
 {/* truncate */}
 > [如果人生是道选择题：下辈子，还选OI吗？](https://www.bilibili.com/video/BV11BGvz4ESY/?share_source=copy_web&vd_source=ae28a8be2267b48e30197b6804263410&t=88)
