--- a/blog/diary/2025-5-10.md
+++ b/blog/diary/2025-5-10.md
@@ -3,7 +3,8 @@ title: 2025.5.10
 authors: [zwz6666]
 tags: [日记,2025]
 date: 2025-5-10
-description: ……
+description: 最近开了家长会，在化学班却做了二班的斩首；网络上也有些事。
+slug: /2025/5/10
 ---
 这次写多一点吧，最近的事以及还没来得及写的看看能不能一起写了，所以这次估计就比较长。
 <!-- truncate -->
