--- a/docs/关于本站/updataLog.mdx
+++ b/docs/关于本站/updataLog.mdx
@@ -135,3 +135,15 @@ rt，详细请见网站列表。
 2. [写给自己看到教程](/docs/docs)格式小改，解决了 MD029 问题。
 3. 插入 Umami 统计代码到网页头部以统计访客信息等（上周加的，但是没有更新到 Github 上）。
 
+## 2025年6月7日
+
+版本号： v1.2.0(文件结构调整)
+
+### 常规更新
+
+1. 增加今天的日记，额外包含三张图片、两个网页文件。
+2. [写给自己看到教程](/docs/docs)增加内网 ip 部署命令（npx）。
+
+### 日记文件结构调整
+
+所有日记主体文件由 `/blog/date.md(x)` 迁移到 `/blog/diary/date.md(x)`。
