更新版本至 1.2.1，添加 Waline 评论系统，集成 AES 加密功能

--- a/docs/关于本站/updataLog.mdx
+++ b/docs/关于本站/updataLog.mdx
@@ -147,3 +147,16 @@ rt，详细请见网站列表。
 ### 日记文件结构调整
 
 所有日记主体文件由 `/blog/date.md(x)` 迁移到 `/blog/diary/date.md(x)`。
+
+## 2025年6月28日
+
+版本号： v1.2.1(重要更新)
+
+常规更新，如日记，此处略
+
+### 增加新功能
+
+1. 一个页面中使用了 AES 加密，本地处理，js 公开。
+2. 在博客文章底部增加 Waline 评论系统（部署在 Vercel 上）。
+
+这两个可能都还有点问题。
