更新版本至 1.2.2，更新 Waline 评论系统，优化加载方式，增加截断标识，更新生日文章

--- a/docs/关于本站/updataLog.mdx
+++ b/docs/关于本站/updataLog.mdx
@@ -160,3 +160,14 @@ rt，详细请见网站列表。
 2. 在博客文章底部增加 Waline 评论系统（部署在 Vercel 上）。
 
 这两个可能都还有点问题。
+
+## 2025年7月26日
+
+### 常规更新
+
+1. 发布原定于 2025 年 7 月 20 日发布的关于我生日的文章。
+2. 2025 年 6 月 22 日的文章增加截断标识。
+
+### Waline 功能完善
+
+修改了加载方法，由原来的自动加载，改为新的点击文末按钮加载，通过按钮绑定函数实现。
