更新版本至 1.2.3 beta，新增技术标签，完善日记描述，删除停用站点，优化网站列表和更新日志内容

--- a/docs/关于本站/updataLog.mdx
+++ b/docs/关于本站/updataLog.mdx
@@ -60,7 +60,7 @@ slug: '/updataLog'
 
 ### 全面启用备用站
 
-当前备用站共 3 个，两个对外提供服务。
+**当前备用站共 3 个，两个对外提供服务。**
 详细见本次新增的[网址列表](/docs/list)。
 
 本次更新时的为：
@@ -171,3 +171,10 @@ rt，详细请见网站列表。
 ### Waline 功能完善
 
 修改了加载方法，由原来的自动加载，改为新的点击文末按钮加载，通过按钮绑定函数实现。
+
+## 2025年9月13日
+
+### 修复历史遗留问题
+
+1. 删除站点列表中早已停止维护和使用的```docs3.zhongwz.top```、```docs4.zhongwz.top```、```doc.zhongwz.top```和```i.zhongwz.top```。
+2. 同步更新站点首页、页脚脚本。
