--- a/docs/关于本站/siteList.mdx
+++ b/docs/关于本站/siteList.mdx
@@ -27,25 +27,11 @@ slug: '/list'
 - [docs2.zhongwz.top](https://docs2.zhongwz.top):  
     备用一站，托管于 CloudFlare Pages，自动部署。
     （理论上与 Github同步，访问相对稳定）
-- ~~[docs3.zhongwz.top](https://docs3.zhongwz.top):  
-    备用二站，托管于 阿里云OSS，新加坡地域。
-    （版本最落后，且更新随缘，访问稳定。毕竟这是真的可能会扣钱的啊）（2025.5.1：暂时暂停服务）~~
-- ~~[docs4.zhongwz.top](https://docs4.zhongwz.top):  
-    备用三站，托管于 热铁盒网页托管，服务器也在国外。
-    （理论上与 Github同步，实际上因为热铁盒的限制，actions 部署总是失败，而且会员马上就要到期了，访问相对稳定）~~
 - [docs5.zhongwz.top](https://docs5.zhongwz.top):  
     备用四站，托管于 Cloudflare Pages，与主站一致，只是域名不同，DNS记录都是相同的。
     （版本最新，但是国内访问稳定）
 
-*快速链接（测试功能）*：
-
-- 访问[此网站](https://doc.zhongwz.top)以使用，这将会测试连接，并自动跳转到速度最快的网站（主站和启用的备用站）的首页。  
-*实现原理：通过 JavaScript 尝试发送请求到每个站点，获取响应时间，然后将响应时间最短的站点作为跳转目标。缓存有效期一个小时。*
-
-然而尴尬的是，这个网站也是部署在 Cloudflare Pages 上的，所以没什么用。我这边测试一般都是 Cloudflare 的最快。（感谢赛博大善人！）
-
-## 其他博客站点
+## 曾经的博客站点
 - [zhongwz.top](https://zhongwz.top):  
-    动态博客，基于 WordPress，支持用户注册并部署在国外免费服务器上，底层为 php 实现。
-- [i.zhongwz.top](https://i.zhongwz.top):  
-    传统静态博客，使用纯 HTML 和 CSS 编写，托管在热铁盒网页托管平台上。已停止维护和更新。
+    动态博客，[主博客](https://zhongwz.top/wordpress)基于 WordPress，支持用户注册并部署在国外免费服务器上，底层为 php 实现。
+    现已基本停止维护。
